--- a/pages/learn/caos/02_01_00_elementi_di_calcolo_delle_probabilità.html
+++ b/pages/learn/caos/02_01_00_elementi_di_calcolo_delle_probabilità.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0MB26WWVES"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-0MB26WWVES');
-</script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0MB26WWVES"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'G-0MB26WWVES');
+  </script>
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,112 +34,157 @@
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/socicon/css/styles.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"></noscript>
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap">
+  </noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap"></noscript>
-  <link rel="preload" as="style" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css" type="text/css">
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap">
+  </noscript>
+  <link rel="preload" as="style" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css">
+  <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css" type="text/css">
 
   <!-- include internals -->
   <script>
-  function includeHTML() {
-    var z, i, elmnt, file, xhttp;
-    /* Loop through a collection of all HTML elements: */
-    z = document.getElementsByTagName("*");
-    for (i = 0; i < z.length; i++) {
-      elmnt = z[i];
-      /*search for elements with a certain atrribute:*/
-      file = elmnt.getAttribute("w3-include-html");
-      if (file) {
-        /* Make an HTTP request using the attribute value as the file name: */
-        xhttp = new XMLHttpRequest();
-        xhttp.onreadystatechange = function() {
-          if (this.readyState == 4) {
-            if (this.status == 200) {elmnt.innerHTML = this.responseText;}
-            if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
-            /* Remove the attribute, and call this function once more: */
-            elmnt.removeAttribute("w3-include-html");
-            includeHTML();
+    function includeHTML() {
+      var z, i, elmnt, file, xhttp;
+      /* Loop through a collection of all HTML elements: */
+      z = document.getElementsByTagName("*");
+      for (i = 0; i < z.length; i++) {
+        elmnt = z[i];
+        /*search for elements with a certain atrribute:*/
+        file = elmnt.getAttribute("w3-include-html");
+        if (file) {
+          /* Make an HTTP request using the attribute value as the file name: */
+          xhttp = new XMLHttpRequest();
+          xhttp.onreadystatechange = function() {
+            if (this.readyState == 4) {
+              if (this.status == 200) {
+                elmnt.innerHTML = this.responseText;
+              }
+              if (this.status == 404) {
+                elmnt.innerHTML = "Page not found.";
+              }
+              /* Remove the attribute, and call this function once more: */
+              elmnt.removeAttribute("w3-include-html");
+              includeHTML();
+            }
           }
+          xhttp.open("GET", file, true);
+          xhttp.send();
+          /* Exit the function: */
+          return;
         }
-        xhttp.open("GET", file, true);
-        xhttp.send();
-        /* Exit the function: */
-        return;
       }
     }
-  }
   </script>
 
 <body>
 
 
   <!-- Navbar-->
-<div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
+  <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
 
   <!-- Title-->
-<section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="title col-md-12 col-lg-10">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Caos</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Elementi di Calcolo delle Probabilità</strong></h4>
-            </div>
+      <div class="row justify-content-center">
+        <div class="title col-md-12 col-lg-10">
+          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Caos</h3>
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Elementi di Calcolo delle Probabilità</strong></h4>
         </div>
+      </div>
     </div>
-</section>
+  </section>
 
 
   <!-- Text-->
 
 
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7">
-
-                  </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-<!-- Prev/Next-->
-<section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
-                    <br>
-                    <br>
-            </div>
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            Un esperimento è qualsiasi processo che produce una realizzazione (o osservazione).
+            L’insieme di tutte le possibili realizzazioni di un esperimento viene detto <b>sample</b> space ed indicato con S.
+          <ul>
+            <li>lancio di 2 monete S = {(T,T), (T,C), (C,T), (C,C)}</li>
+            <li>gara di 3 cavalli (a, b, c) S = {tutti i possibili ordinamenti di(a,b, c)} = {(a, b, c), (a, c, b), . . . , (c, b, a)}</li>
+          </ul>
+          <p class="mbr-text mbr-fonts-style display-7">
+          La frequenza di un evento è data dal caso favorevole all’evento rispetto al numero dei casi possibili.
+          La probabilità è il valore della frequenza dell’evento quando il numero degli esperimenti tende ad infinito
+
+          Consideriamo un esperimento con sample space S.
+          Supponiamo che ad ogni evento A sia associato un numero chiamato probabilità di A ed indicato con P(A), che soddisfa le seguenti proprietà:
+          <ul>
+            <li>Per ogni evento A, la probabilità di A è un numero tra 0 e 1: 0 ≤ P(A) ≤ 1</li>
+            <li>La probabilità del sample space S è 1: P(S) = 1</li>
+            <li>La probabilità dell’unione di eventi disgiunti è uguale alla somma delle probabilità di tali eventi: P(A ∪ B) = P(A) + P(B)</li>
+          </ul>
+          <p class="mbr-text mbr-fonts-style display-7">
+          In generale 2 eventi potrebbero non essere disgiunti.
+
+          $$P(A \bigcup B) = P(A) + P(B) − P(A \bigcap B)$$
+
+          Esempio: un certo negozio accetta pagamenti o con carte di credito VISA o Mastercard.
+
+          22% dei clienti ha Mastercard A
+          58% dei clienti ha VISA. B
+          14% dei clienti ha entrambe. A ∩ B
+
+          Qual è la probabilità che un cliente ha almeno una delle 2 carte?
+          $$P(A) = 0.22, P(B) = 0.58 P(A \bigcup B) = P(A) + P(B) − P(A \bigcap B) = 0.22 + 0.58 − 0.14 = 0.66$$
+
+
+          </p>
         </div>
+      </div>
     </div>
-</section>
+  </section>
 
 
-<!-- Footer-->
-<div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
+
+  <!-- Prev/Next-->
+  <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-10">
+          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
+            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+          </div>
+          <br>
+          <br>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
-  <section style="display: none !important;background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/h" style="color:#aaa;">started with</a> Mobirise</p>
+  <!-- Footer-->
+  <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
 
 
-   <script src="https://www.gabrielavelitch.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/parallax/jarallax.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/smoothscroll/smooth-scroll.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/ytplayer/index.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/dropdown/js/navbar-dropdown.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
-   <script>
-   includeHTML();
-   </script>
+  <section
+    style="display: none !important;background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a
+      href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
+    <p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/h" style="color:#aaa;">started with</a> Mobirise</p>
 
-  </body>
+
+    <script src="https://www.gabrielavelitch.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/parallax/jarallax.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/smoothscroll/smooth-scroll.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/ytplayer/index.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/dropdown/js/navbar-dropdown.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
+    <script>
+      includeHTML();
+    </script>
+
+</body>
+
 </html>
