--- a/pages/learn/caos/02_08_distribuzione_di_poisson.html
+++ b/pages/learn/caos/02_08_distribuzione_di_poisson.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0MB26WWVES"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-0MB26WWVES');
-</script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0MB26WWVES"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'G-0MB26WWVES');
+  </script>
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,151 +34,168 @@
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/socicon/css/styles.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"></noscript>
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap">
+  </noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap"></noscript>
-  <link rel="preload" as="style" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css" type="text/css">
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap">
+  </noscript>
+  <link rel="preload" as="style" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css">
+  <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css" type="text/css">
 
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
   <!-- include internals -->
   <script>
-  function includeHTML() {
-    var z, i, elmnt, file, xhttp;
-    /* Loop through a collection of all HTML elements: */
-    z = document.getElementsByTagName("*");
-    for (i = 0; i < z.length; i++) {
-      elmnt = z[i];
-      /*search for elements with a certain atrribute:*/
-      file = elmnt.getAttribute("w3-include-html");
-      if (file) {
-        /* Make an HTTP request using the attribute value as the file name: */
-        xhttp = new XMLHttpRequest();
-        xhttp.onreadystatechange = function() {
-          if (this.readyState == 4) {
-            if (this.status == 200) {elmnt.innerHTML = this.responseText;}
-            if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
-            /* Remove the attribute, and call this function once more: */
-            elmnt.removeAttribute("w3-include-html");
-            includeHTML();
+    function includeHTML() {
+      var z, i, elmnt, file, xhttp;
+      /* Loop through a collection of all HTML elements: */
+      z = document.getElementsByTagName("*");
+      for (i = 0; i < z.length; i++) {
+        elmnt = z[i];
+        /*search for elements with a certain atrribute:*/
+        file = elmnt.getAttribute("w3-include-html");
+        if (file) {
+          /* Make an HTTP request using the attribute value as the file name: */
+          xhttp = new XMLHttpRequest();
+          xhttp.onreadystatechange = function() {
+            if (this.readyState == 4) {
+              if (this.status == 200) {
+                elmnt.innerHTML = this.responseText;
+              }
+              if (this.status == 404) {
+                elmnt.innerHTML = "Page not found.";
+              }
+              /* Remove the attribute, and call this function once more: */
+              elmnt.removeAttribute("w3-include-html");
+              includeHTML();
+            }
           }
+          xhttp.open("GET", file, true);
+          xhttp.send();
+          /* Exit the function: */
+          return;
         }
-        xhttp.open("GET", file, true);
-        xhttp.send();
-        /* Exit the function: */
-        return;
       }
     }
-  }
   </script>
 
 <body>
 
 
   <!-- Navbar-->
-<div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
+  <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
 
   <!-- Title-->
-<section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="title col-md-12 col-lg-10">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Caos</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Distribuzione di Poisson</strong></h4>
-            </div>
+      <div class="row justify-content-center">
+        <div class="title col-md-12 col-lg-10">
+          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Caos</h3>
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Distribuzione di Poisson</strong></h4>
         </div>
+      </div>
     </div>
-</section>
+  </section>
 
 
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7">
-                    La distribuzione descrive fenomeni per cui la variabile casuale  \(\x\) assume valori interi maggiori o uguali a zero.
-                    La funzione non ha limite superiore e la distribuzione è controllata dal parametro \(\lambda\).
-
-                    La probabilità di avere l’intero \(\k\) è data da: \(p {x = k} = e^(-\lambda) \frac{\lambda^k}{k!} \; x > 0\)
-
-                    Il valor medio della distribuzione è \(\lambda\);
-\(\lambda\) indica il numero di eventi che mediamente in successione e in un dato intervallo di tempo si verificano.
- \(\k\) indica il numero di eventi per un dato intervallo di tempo del quale si vuole
-conoscere la probabilità che si verifichino.
-
-\(\lambda\) è uguale al numero aspettato delle occorrenze che accadono durante un
-intervallo di tempo dato. Ad esempio se l’evento o il gruppo di eventi accade ogni 5
-minuti, per conoscere quanti eventi accadono in un intervallo di 20 minuti, basta:
-• trovare il valore di \(\lambda\); in questo caso  \(\lambda = 20/5 = 4\).
-• verificare sulla distribuzione di Poisson per \(\lambda = 4\) quant’è la probabilità di avere k
-eventi o k gruppi di eventi
-
-
-
-La distribuzione di Poisson è legata al processo di Poisson. Si applica a vari fenomeni di natura
-discreta (ovvero quelli che possono accadere 0,1,2,3,… volte durante un periodo di tempo o in
-una data area) ma con il vincolo che la probabilità rimanga costante nel tempo (o nello spazio in
-caso di area).
-Esempi di eventi che seguono il modello di Poisson sono:
-• Il numero di automobili che passano su una strada in un punto sufficientemente lontano da
-semafori
-• Il numero di errori di ortografia che vengono commessi nella battitura di una pagina
-• Il numero delle chiamate telefoniche ad un call center per minuto
-• Il numero di volte a cui un server web viene richiesto l’accesso a ogni minuto
-• Il numero di animali uccisi da automobilisti trovati sulla strada (per unità di lunghezza)
-• Il numero di mutazioni di una porzione di DNA dopo una quantità definita di radiazioni
-• Il numero di nuclei instabili che decadono un un determinato tempo in un materiale radioattivo.
-(Poiché la sostanza radioattiva decade con il tempo, l’intervallo di tempo utilizzato nel modello
-dovrà essere molto minore del tempo di vita medio della sostanza radioattiva).
-• Il numero degli alberi di pino per unità d’area in una foresta mista
-• Il numero di stelle in un volume dato di spazio
-• La distribuzione dei recettori della retina nell’occhio
-• Il numero di virus che possono infettare una cella in una coltura batterica
-• Clienti in arrivo in negozio in un certo tempo. (per lo studio delle risorse)
-                  </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-<!-- Prev/Next-->
-<section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
-                    <br>
-                    <br>
-            </div>
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            La distribuzione descrive fenomeni per cui la variabile casuale \(\x\) assume valori interi maggiori o uguali a zero.
+            La funzione non ha limite superiore e la distribuzione è controllata dal parametro \(\lambda\).
+            <br>
+            <br>
+            La probabilità di avere l’intero \(\k\) è data da: \(p {x = k} = e^(-\lambda) \frac{\lambda^k}{k!} \; x > 0\)
+            <br>
+            <br>
+            Il valor medio della distribuzione è \(\lambda\).
+            <br>
+            <br>
+            \(\lambda\) indica il numero di eventi che mediamente in successione e in un dato intervallo di tempo si verificano.
+            <br>
+            <br>
+            \(\k\) indica il numero di eventi per un dato intervallo di tempo del quale si vuole conoscere la probabilità che si verifichino.
+            <br>
+            <br>
+            \(\lambda\) è uguale al numero aspettato delle occorrenze che accadono durante un intervallo di tempo dato.
+            Ad esempio se l’evento o il gruppo di eventi accade ogni 5 minuti, per conoscere quanti eventi accadono in un intervallo di 20 minuti, basta:
+          <ul>
+            <li>trovare il valore di \(\lambda\); in questo caso \(\lambda = 20/5 = 4\).</li>
+            <li>verificare sulla distribuzione di Poisson per \(\lambda = 4\) quant’è la probabilità di avere \(\k\) eventi o \(\k\) gruppi di eventi.</li>
+          </ul>
+          <p class="mbr-text mbr-fonts-style display-7">
+            La distribuzione di Poisson è legata al processo di Poisson.
+            Si applica a vari fenomeni di natura discreta (ovvero quelli che possono accadere 0,1,2,3,… volte durante un periodo di tempo o in una data area) ma con il vincolo che la probabilità rimanga costante nel tempo (o nello spazio in caso di
+            area).
+            Esempi di eventi che seguono il modello di Poisson sono:
+          <ul>
+            <li>Il numero di automobili che passano su una strada in un punto sufficientemente lontano da semafori.</li>
+            <li>Il numero di errori di ortografia che vengono commessi nella battitura di una pagina.</li>
+            <li>Il numero delle chiamate telefoniche ad un call center per minuto.</li>
+            <li>Il numero di volte a cui un server web viene richiesto l’accesso a ogni minuto.</li>
+            <li>Il numero di animali uccisi da automobilisti trovati sulla strada (per unità di lunghezza).</li>
+            <li>Il numero di mutazioni di una porzione di DNA dopo una quantità definita di radiazioni.</li>
+            <li>Il numero di nuclei instabili che decadono un un determinato tempo in un materiale radioattivo
+              (poiché la sostanza radioattiva decade con il tempo, l’intervallo di tempo utilizzato nel modello dovrà essere molto minore del tempo di vita medio della sostanza radioattiva).
+            <li>Il numero degli alberi di pino per unità d’area in una foresta mista.</li>
+            <li>Il numero di stelle in un volume dato di spazio.</li>
+            <li>La distribuzione dei recettori della retina nell’occhio.</li>
+            <li>Il numero di virus che possono infettare una cella in una coltura batterica.</li>
+            <li>Clienti in arrivo in negozio in un certo tempo (per lo studio delle risorse).</li>
+          </ul>
+          </p>
         </div>
+      </div>
     </div>
-</section>
+  </section>
 
 
-<!-- Footer-->
-<div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
+
+  <!-- Prev/Next-->
+  <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-10">
+          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
+            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+          </div>
+          <br>
+          <br>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
-  <section style="display: none !important;background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/h" style="color:#aaa;">started with</a> Mobirise</p>
+  <!-- Footer-->
+  <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
 
 
-   <script src="https://www.gabrielavelitch.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/parallax/jarallax.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/smoothscroll/smooth-scroll.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/ytplayer/index.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/dropdown/js/navbar-dropdown.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
-   <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
-   <script>
-   includeHTML();
-   </script>
+  <section
+    style="display: none !important;background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a
+      href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
+    <p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/h" style="color:#aaa;">started with</a> Mobirise</p>
 
-  </body>
+
+    <script src="https://www.gabrielavelitch.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/parallax/jarallax.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/smoothscroll/smooth-scroll.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/ytplayer/index.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/dropdown/js/navbar-dropdown.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
+    <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
+    <script>
+      includeHTML();
+    </script>
+
+</body>
+
 </html>
