--- a/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
+++ b/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
@@ -132,7 +132,7 @@
             <br>
             utilizzando l'identità \(sin(2t) = 2sin(t) \cdot cos(t)\) e sostituendo nell'integrale si ha:
             <br>
-            $$⟨f, g⟩ = \int_-\pi^\pi sin(t) \cdot cos(t)dt$$
+            $$⟨f, g⟩ = \int_(-\pi)^\pi sin(t) \cdot cos(t)dt = \int_-\pi^\pi sin(2t) \cdot d(2t) = \frac{1}{2} $$
           </p>
         </div>
       </div>
