--- a/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
+++ b/pages/learn/complementi_di_dsp/01_01_03_prodotto_scalare_nello_spazio_delle_funzioni.html
@@ -133,6 +133,11 @@
             utilizzando l'identità \(sin(2t) = 2sin(t) \cdot cos(t)\) e sostituendo nell'integrale si ha:
             <br>
             $$⟨f, g⟩ = \int_{-\pi}^{\pi} sin(t) \cdot cos(t)dt = \int_{-\pi}^{\pi} sin(2t) \cdot d(2t) = \frac{1}{2} \int_{-2\pi}^{2\pi} sin(2t) \cdot d(2t) = -\frac{1}{2} cos(t) \int_{-2\pi}^{2\pi} = -0.5 [cos(2\pi) - cos(-2\pi)] =0$$
+            <br>
+            Due funzioni seno e coseno sono quindi tra loro ortogonali se il loro prodo:o scalare è pari a zero.
+            <br>
+            <br>
+
           </p>
         </div>
       </div>
