--- a/pages/learn/complementi_di_dsp/02_00_fast_fourier_transform.html
+++ b/pages/learn/complementi_di_dsp/02_00_fast_fourier_transform.html
@@ -94,7 +94,7 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    La FFT (fast Fourier transform) è un metodo molto rapido per poter
+                    La FFT (Fast Fourier Transform) è un metodo molto rapido per poter
                     estrarre i coefficienti di Fourier da una funzione del tempo.
                     <br>
                     <br>
